# mengzi-t5-fine-tuning

./: .gitignore  README.md  pyproject.toml  run  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
data/abstract/: index.sh  train.csv
data/default/: train.csv  validation.csv
data/sum/: train.csv  validation.csv
data/tests/data/csv/: test1
datasets/abstract/: datas.csv
docs/: learn_python.py  python-basic.py
evaluate/: metrics.py
scripts/: print.mjs  test.mjs
src/mengzi_fine_tuning/: __init__.py  model.py  prompts.py  train.py
src/mengzi_fine_tuning/utils/: __init__.py  basic.py  csv_tool.py  dataset_tool.py  io_tool.py  json_tool.py  string_tool.py
tests/: csv_test.py  data_test.py  index.py  json_test.py  string_test.py
tests/data/json/: test.json
tests/data/string/: test.txt
