[metadata]
name = mengzi_fine_tuning
version = 0.0.1
description = Learn how to fine-tuning mengzi-t5-base

[options]
python_requires = >= 3.9
package_dir =
    = src
packages = find:

install_requires =
    # Core Utils
    pandas #==1.5.0
    datasets #==2.6.0
    sentencepiece #==0.1.97

    # Machine Learning
    transformers #==4.23.1
    torch #==1.12.1
    torchvision #==0.13.1 
    torchaudio #==0.12.1

    # Code Lint
    flake8 #==5.0.4
 
[options.packages.find]
where = src

[flake8]
max_line_length = 120
per_file_ignores =
    __init__.py: F401
exclude = .git,build,dist
ignore = F403
# select = B,C,E,F,N,P,T4,W,B9
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
ignore = E302
#     E203,E305,E402,E501,E721,E741,F841,F999,W503,W504,C408,E302,W291,E303, # F821,
#     # N812 lowercase 'torch.nn.functional' imported as non lowercase 'F'
#     N812,
#     B024 #abstract base class, but it has no abstract methods