[metadata]
name = mengzi_fine_tuning
version = 0.0.1
description = Learn how to fine-tuning mengzi-t5-base

[options]
python_requires = >= 3.9
package_dir =
    = src
packages = find:

install_requires =
    # Core Utils
    pandas #==1.5.0
    datasets #==2.6.0
    sentencepiece #==0.1.97

    # Machine Learning
    transformers #==4.23.1
    torch #==1.12.1
    torchvision #==0.13.1 
    torchaudio #==0.12.1

    # Code Lint
    mypy
    pylint #==5.0.4
 
[options.packages.find]
where = src